<resources>
    <string name="app_name">BeautyStroke</string>
    <string name="what_color_eye_shadow_do_you_own">What color eye shadow do you own?</string>
    <string name="black">Black</string>
    <string name="purple">Purple</string>
    <string name="blue">Blue</string>
    <string name="gold">Gold</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="white">White</string>
    <string name="none">None</string>
    <string name="what_type_of_primer_do_you_have">What type of primer do you have?</string>
    <string name="start">Start</string>
    <string name="no">No</string>
    <string name="perfect_for_a_night_out">Perfect for a night out</string>
    <string name="perfect_for_work">Perfect for work</string>
</resources>
