<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.FitWindowsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beautybackdrop"
    android:orientation="vertical"
    tools:context="com.example.cathychang.athenahacks.Eyeshadow">

    <TextView
        android:id="@+id/introShadow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/whiterectangle"
        android:padding="5dp"
        android:text="@string/what_color_eye_shadow_do_you_own"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorLink="@color/colorPrimary"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="16dp" />

    <CheckBox
        android:id="@+id/black"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/black"
        android:text="@string/black"
        android:textColor="@android:color/background_light" />

    <CheckBox
        android:id="@+id/purple"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/purple2"
        android:text="@string/purple" />

    <CheckBox
        android:id="@+id/Blue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/blue"
        android:text="@string/blue" />

    <CheckBox
        android:id="@+id/Gold"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/gold"
        android:text="@string/gold" />

    <CheckBox
        android:id="@+id/Pink"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/pink"
        android:text="@string/pink" />

    <CheckBox
        android:id="@+id/Yellow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/yellow"
        android:text="Yellow" />

    <CheckBox
        android:id="@+id/White"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/white"
        android:text="@string/white" />

    <Button
        android:id="@+id/btnVideo"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/rectangle"
        android:duplicateParentState="false"
        android:foregroundGravity="top"
        android:text="Take me to my personalized VIdeo!"
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/colorPrimaryDark"
        android:visibility="visible" />


</android.support.v7.widget.FitWindowsLinearLayout>